# peripherals-light-sensor

./: CMakeLists.txt  README.md  test.yaml
.github/workflows/: code-style.yml
example/: test_light_sensor_i2c.c
include/: light_sensor.h
src/: light_sensor_core.c  light_sensor_core.h
src/drivers/: drv_i2c_generic.c
src/drivers/drv_i2c_w1160/: drv_i2c_w1160.c  drv_i2c_w1160.h
test/: test_light_sensor_i2c.c
tests/: test_hw_w1160_i2c_smoke.sh  test_light_sensor_api_contract.c  test_light_sensor_api_contract.sh
